# UkwDetectionSystem

./: .gitignore  .gitmodules  README.md  pyproject.toml
builder/camera_001/certs/: certificate_camera_001.pem.crt  private_camera_001.pem.key  public_camera_001.pem.key  run_streaming.sh
data_handling/: datasets.py  test_s3_wrapper.py
data_handling/archive/: dataset_partitioner_old.ipynb  datasets_chatgpt.py  test_datasets_chatgpt.py
infrastructure/: locals.tf  main.tf  variabes.tf
infrastructure/system_files/rtsp_input/: README.md  update-image-generation-input.json
notebooks/: builder.ipynb  datasets_label_merger..ipynb  datasets_manager.ipynb  datasets_merger.ipynb  datasets_retagger_merge_labels.ipynb  datasets_retaggerr_add_labels.ipynb  datasets_splitter.ipynb  merged.yaml  training_jobs.ipynb
notebooks/supervision/: supervision.ipynb
notebooks/system_files/rtsp_input/: Dockerfile  describe-image-generation-configuration-input.json  input_sampler.py  requirements.txt  run.sh  thing_permission_policy.json  thing_role_policy.json  (+1 more)
notebooks/upscaler/: upscale.ipynb
notebooks/yolonas/: YoloNAS 0: Train .ipynb  YoloNAS 1: Export to ONNX.ipynb
notebooks/yolov5/: Convert_YOLOv5_ONNX_for_Inference.ipynb  YOLOv5 0: Train.ipynb  YOLOv5 1.1: Inference (yolov5).ipynb  YOLOv5 1.2: Inference (pytorch).ipynb  YOLOv5 2: Export to ONNX.ipynb  YOLOv5 2: Export to OpenVINO.ipynb  YOLOv5 2: Export to Pytorch.ipynb  YOLOv5 3: Inference (onnx).ipynb
src/data_handling/: datasets.py  s3_wrapper.py  test_datasets.py  yolov5_dataset_class_merger.py
(+20 files in other folders)
